tests/vendor/invalid/semantics/default_outside_switch.c
//tags: simple, switch
int main() {
    {
        // case statements can only appear inside switch statements
        default: return 0;
    }
}